# python-lifecycle

./: .pre-commit-config.yaml  config.py  pyproject.toml  tox.ini
.github/workflows/: master-python-package.yml  python-package.yml
configs/: settings.yaml
docs/: .gitignore  conf.py  index.rst
python_lifecycle/: __init__.py
python_lifecycle/calculator/: broken.py  cli.py  complex.py  simple.py
tests/calculator/: test_complex.py  test_simple.py
