[tool.poetry]
name = "python-lifecycle"
version = "0.1.0"
description = ""
authors = ["Shashanka Prajapati <shashanka@fusemachines.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^3.8.3"
black = "^20.8b1"
isort = "^5.5.4"
mypy = "^0.782"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
